# flowgate

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: dispatch.rs
benchmarks/: Cargo.toml  README.md  run.sh  smoke.sh
benchmarks/actix-bench/: Cargo.toml
benchmarks/actix-bench/src/: main.rs
benchmarks/axum-bench/: Cargo.toml
benchmarks/axum-bench/src/: main.rs
benchmarks/flowgate-bench/: Cargo.toml
benchmarks/flowgate-bench/src/: main.rs
benchmarks/hyper-bench/: Cargo.toml
benchmarks/hyper-bench/src/: main.rs
benchmarks/results/: results-2026-04-19.md  results-2026-04-19.md.tsv
docs/: architecture.md  perf-baseline.md
docs/plans/: flowgate-v0.1-implementation.md  flowgate-v0.2-implementation.md  flowgate-v0.3-release-sequencing.md
examples/: groups.rs  hello.rs  sse.rs  tls.rs  ws_echo.rs
src/: app.rs  body.rs  config.rs  context.rs  error.rs  group.rs  handler.rs  lib.rs  middleware.rs  observer.rs  openapi_stub.rs  response.rs  router.rs  server.rs  sse.rs  tls.rs  ws.rs
src/extract/: json.rs  mod.rs  path.rs  query.rs  request_id.rs  state.rs
src/middleware/: mod.rs  recover.rs  request_id.rs  timeout.rs
src/openapi/: meta.rs  mod.rs  spec.rs  ui.rs
tests/: integration.rs
