[package]
name = "flowgate"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Rust web framework for embedded Linux systems with FastAPI-inspired ergonomics"
license = "MIT"

[features]
default = ["tracing-fmt"]
tracing-fmt = ["dep:tracing-subscriber"]
ws = ["dep:tokio-tungstenite"]
tls = ["dep:tokio-rustls", "dep:rustls"]
multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
tokio = { version = "1.52", features = ["rt", "net", "macros"] }
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http = "1.4"
http-body = "1.0"
http-body-util = "0.1.3"
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tracing = "0.1"
matchit = "0.9"

# Feature-gated
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }

[dev-dependencies]
hyper = { version = "1.9", features = ["client"] }
