[package]
name = "flowgate"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Rust web framework for embedded Linux systems with FastAPI-inspired ergonomics"
license = "MIT"

[features]
default = ["tracing-fmt"]
tracing-fmt = ["dep:tracing-subscriber"]
ws = ["dep:tokio-tungstenite", "dep:sha1", "dep:base64"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
multi-thread = ["tokio/rt-multi-thread"]
recover = []
openapi = []

[dependencies]
tokio = { version = "1.52", features = ["rt", "net", "macros", "sync", "time"] }
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http = "1.4"
http-body = "1.0"
http-body-util = "0.1.3"
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tracing = "0.1"
matchit = "0.9"
futures-core = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await", "sink"] }

# Feature-gated
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
sha1 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

[[example]]
name = "groups"
required-features = ["openapi"]

[[example]]
name = "tls"
required-features = ["tls"]

[[example]]
name = "sse"

[[example]]
name = "ws_echo"
required-features = ["ws"]

[dev-dependencies]
hyper = { version = "1.9", features = ["client"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tokio = { version = "1.52", features = ["rt", "net", "macros", "sync", "time", "io-util"] }
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "0.26"
tempfile = "3.10"
tokio-tungstenite = "0.29"

[[bench]]
name = "dispatch"
harness = false
