[package]
name = "axum-bench"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "axum-bench"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
