[package]
name = "flowgate-bench"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "flowgate-bench"
path = "src/main.rs"

[dependencies]
flowgate = { path = "../..", default-features = false, features = ["multi-thread"] }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
