[package]
name = "hyper-bench"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "hyper-bench"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
